# TransparentRag

./: .dockerignore  .env.example  .env.sandbox.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  pr-labels.yml  release-pr.yml  release.yml
.playwright-mcp/: page-2026-07-08T22-41-51-223Z.yml  page-2026-07-08T22-41-53-250Z.yml  page-2026-07-08T22-41-53-870Z.yml  page-2026-07-08T22-41-54-977Z.yml  page-2026-07-08T22-41-58-082Z.yml  page-2026-07-08T22-43-05-600Z.yml  page-2026-07-08T22-43-09-183Z.yml  page-2026-07-09T03-04-11-214Z.yml  page-2026-07-09T03-04-13-231Z.yml  page-2026-07-09T03-04-13-802Z.yml  page-2026-07-09T03-04-14-851Z.yml  page-2026-07-09T03-04-15-920Z.yml  page-2026-07-09T03-06-38-004Z.yml  page-2026-07-09T03-13-52-216Z.yml  page-2026-07-09T03-13-54-289Z.yml  page-2026-07-09T03-13-54-853Z.yml  page-2026-07-09T03-13-55-905Z.yml  page-2026-07-09T03-13-58-999Z.yml  page-2026-07-09T03-14-05-139Z.yml
app/: AGENTS.md  __init__.py
app/api/: config.py  dependencies.py  main.py
app/cache/: __init__.py  resources.py  types.py  values.py
app/chat/: __init__.py  branching.py  events.py  messages.py  model_settings.py  parameters.py  persistence.py  reasoning.py  run_loop.py  service.py  setup.py  state.py  streaming.py  tool_calls.py  tools.py  usage.py
app/clients/: __init__.py  cache.py
app/core/: config.py  security.py
app/db/: bootstrap.py  engine.py  migrations.py  models.py  pg_search_support.py  pgvector_support.py  repositories.py  schema.py  session.py
app/evals/: __init__.py  collections.py  dataset_queries.py  provisioning.py  sampling.py  service.py  wire.py
app/observability/: __init__.py  buffer.py  config.py  context.py  events.py  export.py  middleware.py  redaction.py
app/pipelines/: __init__.py  config.py  config_fields.py  defaults.py  definition.py  diff.py  interface.py  models.py  node.py  payloads.py  ports.py  registry.py  resolution.py  result_limit_upgrades.py  runtime.py  settings.py  template.py  tracing.py  upgrades.py  validation.py  validation_declarations.py  validation_variables.py  variables.py
app/providers/: __init__.py  base.py  cohere.py  ollama.py  openrouter.py  pinecone.py  registry.py  tei.py
app/retrieval/: __init__.py  indexing.py  models.py  pinecone.py
app/schemas/: __init__.py  admin.py  app_config.py  auth.py  base.py  chat.py  chat_parameters.py  collections.py  content_types.py  diagnostics.py  documents.py  enums.py  evals.py  evals_generation.py  files.py  indexes.py  models.py  observability.py  ollama.py  openrouter.py  pinecone_indexes.py  pipelines.py  prompts.py  providers.py  retrieval.py  setup.py  tokenizers.py  traces.py  visualization.py
app/services/: accounts.py  admin_users.py  app_config.py  chat.py  chunking.py  collection_deletion.py  collection_tools.py  collections.py  connections.py  errors.py  file_backfill.py  file_copy.py  file_deletion.py  file_search.py  files.py  huggingface_tokenizers.py  index_admin.py  ingestion.py  ingestion_queue.py  model_catalog.py  openrouter.py  pipeline_resolution.py  pipeline_upgrades.py  pipeline_validation.py  pipelines.py  prompts.py  provider_keys.py  provider_migration.py  retrieval.py  setup.py  tokenizer_migration.py  tool_invocation.py  traces.py
app/telemetry/: __init__.py  events.py  recorder.py  service.py
app/utils/: file_storage.py  ordering.py  time.py
app/vectorstores/: base.py  registry.py
app/visualization/: __init__.py
deploy/compose/: ollama.yml  tei-embedding.yml  tei-reranker.yml
docs/: DEVELOPMENT.md  TRACER_DESIGN.md  agents-hierarchy-audit.md  backend-cli.md  diagnostics.md  docker-setups.md  observability.md  sandbox-scenarios.md  sandbox.md  synthetic-eval-generation.md
external_api_documentation/: download-pinecone-docs.mjs
frontend/: AGENTS.md  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/scripts/: capture-readme-pipeline.mjs  generate-brand-icons.mjs
frontend/src/: middleware.ts
sandbox/: AGENTS.md  __init__.py  __main__.py  builders.py  catalog.py  cli.py  config.py  context.py  keys.py  registry.py
sandbox/assets/: aurora-station.md  glasswing-archive.md  tidepool-protocol.md
sandbox/harness/: __init__.py  db.py  servers.py
sandbox/scenarios/: __init__.py  blank.py  cohere_connected.py  collection_ready.py  connected.py  diagnostics_mismatch.py  evals_ready.py  fresh_user.py  ollama_connected.py
scripts/: __init__.py  backend_cli.py  bump_version.py  download-openrouter-docs.mjs  download-pinecone-docs.mjs  ensure_postgres.py  export_readme_pipelines.py  smoke_provider_reranking.py
tests/: conftest.py  test_bump_version.py  test_module_size.py  test_time_utils.py
tests/api/: conftest.py  test_admin_usage_routes.py  test_admin_users_routes.py  test_auth_routes.py  test_auth_sessions.py  test_chat_routes.py  test_chat_stream_events.py  test_collections_routes.py  test_config.py  test_config_enforcement.py  test_config_routes.py  test_connections_routes.py  test_dependencies.py  test_diagnostics_export.py  test_diagnostics_route.py  test_error_translation.py  test_evals_routes.py  test_files_routes.py  test_indexes_routes.py  test_key_gating.py  test_main.py  test_main_logging.py  test_misc_routes.py  test_model_catalog_routes.py  test_observability_middleware.py  test_pipelines_routes.py  test_route_contract.py  test_search_routes.py  test_setup_routes.py  test_tokenizers_routes.py  test_tools_routes.py  test_traces_routes.py  test_visualization_routes.py
tests/assets/: expression_vectors.json  observability_contract.json  sample.txt
tests/cache/: test_resources.py  test_values.py
tests/chat/: conftest.py  test_chat_branching.py  test_chat_edits.py  test_chat_error_paths.py  test_chat_parameters.py  test_chat_persistence.py  test_chat_reasoning.py  test_chat_service_flow.py  test_chat_streaming.py  test_chat_tool_helpers.py  test_chat_tool_history.py  (+4 more)
(+1043 files in other folders)
