[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transparent-rag"
version = "0.1.0"
description = "Modular Pinecone-backed retrieval toolkit for TransparentRAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pinecone>=5.0.0",
    "sentence-transformers>=2.5.1",
    "umap-learn>=0.5.5",
    "pydantic>=2.6.0",
    "pypdf>=4.0.0",
    "fastapi>=0.111.0,<0.126",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "openai>=1.30.5",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.5.0",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5",
    "coverage[toml]>=7.6",
    "pylint>=3.2.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-jose>=3.3",
    "types-passlib>=1.7",
]

[tool.uv]
# This repository is an "application-style" layout (run from the repo root).
# Avoid packaging/installing the project itself; just manage dependencies + venv.
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PT", "C90", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI's Depends()/Query()/Body()/File() as a default is the framework's idiom
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["C901", "SIM117"]
# Burn-down list: each entry below is owned by the phase that rewrites the module,
# never a place to park code you don't want to lint. Do not copy this pattern for
# new code.
"app/pipelines/nodes/*.py" = ["RUF012"]  # TODO(phase-5): remove; node port lists become tuples or a proper base-class contract
"tests/pipelines/test_pipeline_nodes.py" = ["RUF012"]  # TODO(phase-5): remove; mirrors the node subclass pattern above
"tests/pipelines/test_pipeline_runtime_coverage.py" = ["RUF012"]  # TODO(phase-5): remove; mirrors the node subclass pattern above
"tests/pipelines/test_pipeline_trace.py" = ["RUF012"]  # TODO(phase-5): remove; mirrors the node subclass pattern above
"app/schemas/enums.py" = ["UP042"]  # TODO(phase-2): remove; `str(member)` differs between a str/Enum mixin and StrEnum -- verify no code depends on the "Class.MEMBER" str() form before switching. Moved here from app/db/models.py when the enums relocated to app.schemas.enums.
"app/schemas/auth.py" = ["UP042"]  # TODO(phase-2): remove; same str(member) caveat as app/schemas/enums.py
"app/api/routes/auth.py" = ["C901"]  # TODO(phase-6): remove; update_current_user rewritten with the rest of api.routes
"app/chat/processing/parameters.py" = ["C901"]  # TODO(phase-4): remove; prepare_reasoning_override/sanitize_provider_preferences rewritten with app.chat
"app/chat/processing/reasoning.py" = ["C901"]  # TODO(phase-4): remove; append_reasoning_segment rewritten with app.chat
"app/pipelines/runtime.py" = ["C901"]  # TODO(phase-5): remove; validate/_execute_nodes rewritten with app.pipelines

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false                # flipped true in Phase 8
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
# Temporary per-module relaxations. Each override is a burn-down list entry
# owned by a named phase — never add one without a phase to remove it, and
# never treat this list as a place to park code you don't want to type.
#
# These use `ignore_errors = true` (not a narrower flag) because the errors here
# are not missing annotations -- they're real type mismatches from dynamic
# patterns the rewrite phases replace (config: BaseModel accessed as its
# subtype, SQLAlchemy boolean-typed filter expressions, str | None flowing into
# `str`-typed dict keys, etc.). A narrower per-check relaxation would still
# leave dozens of unrelated errors failing `make verify` today.

[[tool.mypy.overrides]]
module = "app.chat.*"
ignore_errors = true  # removed in Phase 4

[[tool.mypy.overrides]]
module = "app.pipelines.*"
ignore_errors = true  # removed in Phase 5

[[tool.mypy.overrides]]
module = "app.api.routes.*"
ignore_errors = true  # removed in Phase 6

[[tool.mypy.overrides]]
module = "app.services.openrouter"
ignore_errors = true  # removed in Phase 6

[[tool.mypy.overrides]]
module = "app.services.pipelines"
ignore_errors = true  # removed in Phase 6

[[tool.mypy.overrides]]
# app.db.models and app.db.repositories are mypy-clean as of Phase 2 (Tasks
# 2.3/2.4) and deliberately excluded from this override. session/migrations/
# schema still have the same SQLModel select()/.where() typing friction (raw
# column comparisons typed as bool/UUID instead of ColumnElement) and are
# narrowed here until Task 2.5 types them.
module = [
    "app.db.session",
    "app.db.migrations",
    "app.db.schema",
]
ignore_errors = true  # removed in Phase 2

[[tool.mypy.overrides]]
module = "app.visualization.*"
# Same SQLModel `select()`/`.where()` typing friction as app.db.* (raw column
# comparisons typed as `bool`/`UUID` instead of `ColumnElement`) -- owned by the
# same Phase 2 db-typing cleanup, not a separate burn-down item.
ignore_errors = true  # removed in Phase 2

[[tool.mypy.overrides]]
module = "umap"
# umap-learn ships no inline types and no `types-umap` stub package exists on
# PyPI. This is a permanent third-party stub gap, not a phase burn-down item.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "-m", "not integration"]
markers = ["integration: hits live OpenRouter/Pinecone; needs TEST_* credentials"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
    "scripts/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
jobs = 0
py-version = "3.11"

[tool.pylint.reports]
score = true

[tool.pylint.design]
max-args = 6

[tool.pylint."messages control"]
# Pylint is kept only as the design checker; ruff (see [tool.ruff]) covers
# everything else (imports, unused vars, complexity, style, bugbear, pyupgrade,
# simplify, pytest-style, refactor hints). Module length is NOT enforced here:
# tests/test_module_size.py owns the 400-line ceiling and its grandfathered
# burn-down list precisely (an aggregate score can't fail on a single new
# oversize module without also passing the known grandfathered ones).
disable = ["all"]
enable = [
    "too-many-arguments",
    "too-many-branches",
    "too-many-statements",
    "too-many-locals",
]

[tool.setuptools.packages.find]
where = ["app"]
